--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<img src="images/profile_yacin.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
 							</figure>
 							<h1>Yacin Cheffai</h1>
-							<p>Born and raised in <a href="#">Brooklyn</a>. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the <a href="#">Semantics</a>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+							<p>Je suis un jeune développeur dynamique, rigoureux et polyvalent,  j'ai une grande capacité d'apprendre vite et je suis toujours au courant des dernières technologies</p>
 						</div>
 					</div>
 					<div class="row">
