--- a/index.html
+++ b/index.html
@@ -101,15 +101,14 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2001-2004</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2011-2014</h2>
+									<p>License en Informatique</p>
 								</div>
 							</div>
 
@@ -118,18 +117,8 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2004-2008</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
-								</div>
-							</div>
-
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>2008-2012</h2>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2014-2016</h2>
+									<p>Master professionnel en Informatique</p>
 								</div>
 							</div>
 
@@ -143,16 +132,16 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<p>I have the privilege to work with these cool companies.</p>
+							<p>J'ai le privilège de travailler avec ces entreprises géniales.</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2008 - Present</h2>
-									<h3>XYZ Inc.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2018 - Present</h2>
+									<h3>NEOPOLIS</h3>
+									<p>Développeur Python</p>
 								</div>
 							</div>
 
@@ -161,20 +150,9 @@
 									<i class="icon-black-tie"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2004-2008</h2>
-									<h3>Previous Ltd Co.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
-								</div>
-							</div>
-
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-black-tie"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>1999-2004</h2>
-									<h3>Previous Ltd Co.</h3>
-									<p>Far far away, behind the word mountains, far from the countries.</p>
+									<h2>2016-2018</h2>
+									<h3>5E TECHNOLOGY</h3>
+									<p>développeur web junior</p>
 								</div>
 							</div>
 
@@ -217,7 +195,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
 						Si vous avez des questions, n'hésitez pas à me contacter par mail : 
-						<a>yacincheffai@yahoo.com</a>
+						<a>yacincheffai@gmail.com</a>
 					</small>
 				</div>
 			</div>
