--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								<div class="fh5co-text">
 									<h2>2016-2018</h2>
 									<h3>5E TECHNOLOGY</h3>
-									<p>développeur web junior</p>
+									<p>Développeur web junior</p>
 								</div>
 							</div>
 
