--- a/index.html
+++ b/index.html
@@ -121,6 +121,34 @@
 									<p>Master professionnel en Informatique</p>
 								</div>
 							</div>
+							
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-graduation-cap"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2017</h2>
+									<p>Formation JAVA/ANDROID</p>
+								</div>
+							</div>
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-graduation-cap"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2017</h2>
+									<p>Formation PYTHON</p>
+								</div>
+							</div>
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-graduation-cap"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2018</h2>
+									<p>Formation GIT/DOCKER</p>
+								</div>
+							</div>
 
 						</div>
 						
@@ -142,6 +170,16 @@
 									<h2>2018 - Present</h2>
 									<h3>NEOPOLIS</h3>
 									<p>Développeur Python</p>
+								</div>
+							</div>
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2018</h2>
+									<h3>Freelancer</h3>
+									<p>Développeur Web</p>
 								</div>
 							</div>
 
