--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<figure>
 								<img src="images/profile_yacin.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
 							</figure>
-							<h1>Yacin Cheffai</h1>
+							<h1>Yassine Cheffai</h1>
 							<p>Je suis un jeune développeur dynamique, rigoureux et polyvalent,  j'ai une grande capacité d'apprendre vite et je suis toujours au courant des dernières technologies</p>
 						</div>
 					</div>
@@ -91,9 +91,9 @@
 						</div>
 					</div>
 					<ul class="fh5co-social">
-						<li><a href="https://github.com/Yacin-Cheffai/" target="_blank"><i class="icon-github-square"></i></a></li>
+						<li><a href="https://github.com/Yassine-cheffai/" target="_blank"><i class="icon-github-square"></i></a></li>
 						<li><a href="https://medium.com/@yacincheffai" target="_blank"><i class="icon-pencil"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/yacin-cheffai-2431b5104/" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/yassine-cheffai-2431b5104/" target="_blank"><i class="icon-linkedin"></i></a></li>
 					</ul>
 				</div>
 			</div>
