--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Yassine Cheffai &mdash; Python Developer</title>
+	<title>Yassine Cheffai &mdash; Python/React Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -85,14 +85,14 @@
 						<div class="col-md-12 fh5co-counter">
 							<div class="fh5co-number fh5co-left">2</div>
 							<div class="fh5co-text">
-								<h3 class="border-bottom">Ans d'éxperience en tant que Développeur <a>PYTHON</a></h3>
+<!-- 								<h3 class="border-bottom">Ans d'éxperience en tant que Développeur <a>PYTHON</a></h3> -->
 								<br>
 							</div>
 						</div>
 					</div>
 					<ul class="fh5co-social">
 						<li><a href="https://github.com/Yassine-cheffai/" target="_blank"><i class="icon-github-square"></i></a></li>
-						<li><a href="https://medium.com/@yacincheffai" target="_blank"><i class="icon-pencil"></i></a></li>
+<!-- 						<li><a href="https://medium.com/@yacincheffai" target="_blank"><i class="icon-pencil"></i></a></li> -->
 						<li><a href="https://www.linkedin.com/in/yassine-cheffai-2431b5104/" target="_blank"><i class="icon-linkedin"></i></a></li>
 					</ul>
 				</div>
@@ -205,13 +205,13 @@
 						</div>
 
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="89"><span><strong>SQL</strong>89%</span></div>
+							<div class="chart" data-percent="89"><span><strong>GIT</strong>89%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="85"><span><strong>GIT</strong>85%</span></div>
+							<div class="chart" data-percent="85"><span><strong>REACT</strong>85%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>DOCKER</strong>90%</span></div>
+							<div class="chart" data-percent="90"><span><strong>DOCKER</strong>80%</span></div>
 						</div>
 
 					</div>
