--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 fh5co-counter">
-							<div class="fh5co-number fh5co-left">2</div>
+<!-- 							<div class="fh5co-number fh5co-left">2</div> -->
 							<div class="fh5co-text">
-<!-- 								<h3 class="border-bottom">Ans d'éxperience en tant que Développeur <a>PYTHON</a></h3> -->
+								<h3 class="border-bottom">Développeur Python/React</h3>
 								<br>
 							</div>
 						</div>
