--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<div class="row">
 						<div class="col-md-12 fh5co-counter">
 <!-- 							<div class="fh5co-number fh5co-left">2</div> -->
-							<div class="fh5co-text">
+							<div>
 								<h3 class="border-bottom">Développeur Python/React</h3>
 								<br>
 							</div>
